# tocify

./: .env.example  .gitignore  AGENT.md  DEAD_CODE.md  README.md  digest.md  digest.py  feeds.txt  interests.md  prompt.md  prompt.txt  pyproject.toml  requirements.txt  tocify-weekly-brief-editorial.md
.github/workflows/: weekly-digest-cursor.yml  weekly-digest.yml  weekly-runner.yml
docs/: plan-branches-capabilities-voytek.md  plan-issue-101-semantic-scholar.md  sources.md
scripts/: clean_briefs_articles.py
tests/: runner_test_utils.py  test_changelog.py  test_clean_briefs_articles.py  test_editorial_brief.py  test_frontmatter_generation.py  test_google_news_link_resolver.py  test_googlenews.py  test_html_adapter.py  test_integrations_shared.py  test_interests_parser.py  test_link_hygiene.py  test_link_resolution.py  test_markdown_lint.py  test_newsrooms.py  test_runner_backend_dispatch.py  test_runner_cli_init_quartz.py  test_runner_csv2md.py  test_runner_quartz_init.py  test_runner_vault_paths.py  test_semanticscholar.py  test_topic_gardener_default_behavior.py  test_topic_gardener_footnotes.py  test_topic_redundant_mentions.py  test_triage_lanes.py  test_utils.py  test_weekly_dual_lane.py  test_weekly_google_news_resolution.py  test_weekly_link_resolution.py  test_weekly_newspaper_guard.py  test_weekly_normalization.py  test_weekly_semantic_scholar.py
tocify/: __init__.py  clinicaltrials.py  config.py  digest.py  edgar.py  frontmatter.py  google_news_link_resolver.py  googlenews.py  historical.py  markdown_lint.py  news.py  newsrooms.py  semanticscholar.py  triage_lanes.py  utils.py
tocify/integrations/: __init__.py  _shared.py  cursor_cli.py  gemini_triage.py  openai_triage.py
tocify/runner/: __init__.py  _test_cli.py  _utils.py  annual.py  brief_writer.py  changelog.py  clear.py  cli.py  csv2md.py  dashboard.py  link_hygiene.py  link_resolution.py  monthly.py  nav_wikilinks.py  prompt_templates.py  quartz_init.py  roundup_common.py  vault.py  weekly.py  weeks.py
(+14 files in other folders)
