[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tocify"
version = "0.5.0"
description = "Weekly Journal ToC Digest (RSS → triage → digest) and vault runner"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "feedparser>=6.0.0",
    "python-dateutil>=2.9.0",
    "python-dotenv>=1.0.0",
    "openai>=1.0.0",
    "httpx>=0.27.0",
    "google-genai>=0.6.0",
    "tqdm",
    "newspaper3k",
    "mdformat>=1.0.0",
    "mdformat-frontmatter>=0.0.1",
    "mdformat-footnote>=0.1.0",
]

[project.scripts]
tocify = "tocify.runner.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["tocify*"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.8.0",
]

[tool.ruff]
target-version = "py310"

[tool.ruff.lint]
select = ["F401", "F841", "E401"]
